simple syncing of counters to slow down enumerator and avoid excessive consumption of memory